--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   feather_icons: ^1.0.1
+  flutter_riverpod: ^0.14.0+2
   flutter_svg: ^0.21.0+1
   http: ^0.13.1
   websafe_svg: ^2.0.0
