--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,14 +25,21 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   feather_icons: ^1.0.1
+  flutter_launcher_icons: ^0.9.0
   flutter_riverpod: ^0.14.0+2
   flutter_svg: ^0.21.0+1
   http: ^0.13.1
+  splashscreen: ^1.3.5
   websafe_svg: ^2.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icons/icon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -72,4 +79,3 @@ flutter:
   # see https://flutter.dev/custom-fonts/#from-packages
   assets:
     - assets/icons/
-           
